<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
      android:padding="15dp">

        <ImageView
            android:id="@+id/h_s_product_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone1" />

        <TextView
            android:id="@+id/h_s_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/proregular"
            android:text="@string/iphone_13_pro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/h_s_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/prolight"
            android:text="@string/monitor"
            android:textAlignment="center"
            android:textColor="#8BC34A"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/h_s_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/prolight"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>