<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RecyclerBackground"
    tools:context=".AddAddressActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MallShoppingOnline.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            app:theme="@style/ToolBarStyle">

            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_address"
                android:drawablePadding="8dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/proregular"
                android:gravity="center"
                android:text="@string/address_header"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="visible" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_address" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/slider_background"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/prolight"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="#838383"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/locality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/slider_background"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/prolight"
                android:gravity="start"
                android:hint="@string/address_street"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="16dp"
                android:textColor="#838383"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/flat_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/slider_background"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/prolight"
                android:gravity="start"
                android:hint="@string/flat_no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="16dp"
                android:textColor="#838383"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/slider_background"
                    android:backgroundTint="@color/white"
                    android:elevation="3dp"
                    android:fontFamily="@font/prolight"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="#838383"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/slider_background"
                    android:backgroundTint="@color/white"
                    android:elevation="3dp"
                    android:fontFamily="@font/prolight"
                    android:hint="@string/address_zone"
                    android:inputType="textMultiLine"
                    android:padding="16dp"
                    android:textColor="#838383"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/slider_background"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:fontFamily="@font/prolight"
                android:hint="@string/landmark"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="#838383"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/slider_background"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:fontFamily="@font/prolight"
                android:hint="@string/address_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="#838383"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/slider_background"
                    android:backgroundTint="@color/white"
                    android:elevation="3dp"
                    android:fontFamily="@font/prolight"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="#838383"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/alternate_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/slider_background"
                    android:backgroundTint="@color/white"
                    android:elevation="3dp"
                    android:fontFamily="@font/prolight"
                    android:hint="@string/alternate_mobile_no"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="#838383"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/purple_200"
                android:fontFamily="@font/proregular"
                android:text="@string/save_btn"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>