<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".fragment.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/sign_up_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_round"
            android:elevation="10dp"
            android:padding="10dp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/sign_up_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_close" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_close_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:paddingEnd="20dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proregular"
                    android:text="@string/register"
                    android:textColor="@color/purple_200"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="#F4F4F4"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/red"
                    app:endIconMode="clear_text"
                    app:endIconTint="#B4B4B4"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/prolight"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#838383"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_lastname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="#F4F4F4"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/red"
                    app:endIconMode="clear_text"
                    app:endIconTint="#B4B4B4"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/prolight"
                        android:hint="@string/fullName"
                        android:inputType="textPersonName"
                        android:textColor="#838383"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="#F4F4F4"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/red"
                    app:hintEnabled="true"
                    app:passwordToggleDrawable="@drawable/show_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gray"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/prolight"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#838383"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="#F4F4F4"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/red"
                    app:hintEnabled="true"
                    app:passwordToggleDrawable="@drawable/show_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gray"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/prolight"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:textColor="#838383"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/sign_up_agreement"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_200"
                    android:fontFamily="@font/prolight"
                    android:text="@string/agreement"
                    android:textColor="#838383"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/sign_up_card_view_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="@color/purple_200"
                    card_view:cardCornerRadius="20dp"
                    card_view:cardElevation="2dp">

                    <Button
                        android:id="@+id/sign_up_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/prolight"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/purple_200"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="หรือ"
                        android:textColor="@color/purple_200"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:fontFamily="@font/prolight"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/purple_200"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvAlreadyAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/prolight"
                    android:text="@string/alreadyAccount"
                    android:textAlignment="center"
                    android:textColor="#A8A8A8" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>